# advent-of-code-2024

./: .flake8  .gitignore  .pre-commit-config.yaml  main.py  pyproject.toml  pytest.ini
.github/: README.md
cookiecutter-template/: README.md  cookiecutter.json
cookiecutter-template/hooks/: post_gen_project.py
cookiecutter-template/{{cookiecutter.__day_number}}/solutions/: day{{cookiecutter.__day_number}}.py
cookiecutter-template/{{cookiecutter.__day_number}}/tests/: test_day{{cookiecutter.__day_number}}.py
cookiecutter-template/{{cookiecutter.day_number}}/solutions/: day{{cookiecutter.day_number}}.py
cookiecutter-template/{{cookiecutter.day_number}}/tests/: test_day{{cookiecutter.day_number}}.py
solutions/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py
tests/: test_day01.py  test_day02.py  test_day03.py  test_day04.py  test_day05.py  test_day06.py  test_day07.py  test_day08.py  test_day09.py  test_day10.py  test_day11.py  test_day12.py
utils/: read_input.py
