[tool.poetry]
name = "advent-of-code-2024"
version = "0.1.0"
description = ""
authors = ["Dylon Condon <dyloncondon@gmail.com>"]
readme = ".github/README.md"

[tool.poetry.dependencies]
python = "^3.13"
numpy = "^2.1.3"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
flake8 = "^7.1.1"
pytest = "^8.3.4"
pre-commit = "^4.0.1"
cookiecutter = "^2.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
exclude = "cookiecutter-template"
